Add server count data to index.html

--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
                 <th class="fixed02">VxT</th>
             </tr>
             <tr>
+                <td class="fixed02">BOTの導入サーバー数(10の位を切り上げ・2024/01/17時点)</td>
+                <td class="safe">9000</td>
+                <td class="safe">6900</td>
+                <td>400</td>
+                <td>700</td>
+                <td class="safe">5100</td>
+                <td>1000</td>
+                <td>600</td>
+                <td>1700</td>
+                <td>1000</td>
+                <td class="warning">30(not verified)</td>
+                <td>2700</td>
+            </tr>
+            <tr>
                 <td class="fixed02">スラッシュコマンド対応</td>
                 <td class="safe">✓</td>
                 <td class="safe">✓</td>
